SqdToOalTranslator/AntlrFiles/SequenceDiagramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------


// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SequenceDiagramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, STRING=30, NUMBER=31, 
		WS=32;
	public const int
		RULE_json = 0, RULE_obj = 1, RULE_pair = 2, RULE_arr = 3, RULE_value = 4, 
		RULE_name = 5, RULE_xmiId = 6, RULE_xmiIdRef = 7, RULE_lifeline = 8, RULE_message = 9, 
		RULE_occurenceSpecification = 10, RULE_combinedFragment = 11, RULE_interactionOperand = 12, 
		RULE_guard = 13, RULE_fragments = 14, RULE_specification = 15, RULE_interactionConstraint = 16, 
		RULE_opaqueExpression = 17, RULE_covered = 18, RULE_receiveEvent = 19, 
		RULE_sendEvent = 20, RULE_body = 21, RULE_interactionOperator = 22, RULE_operand = 23, 
		RULE_ownedElements = 24;
	public static readonly string[] ruleNames = {
		"json", "obj", "pair", "arr", "value", "name", "xmiId", "xmiIdRef", "lifeline", 
		"message", "occurenceSpecification", "combinedFragment", "interactionOperand", 
		"guard", "fragments", "specification", "interactionConstraint", "opaqueExpression", 
		"covered", "receiveEvent", "sendEvent", "body", "interactionOperator", 
		"operand", "ownedElements"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "','", "'}'", "':'", "'['", "']'", "'true'", "'false'", "'null'", 
		"'\"name\"'", "'\"XmiId\"'", "'\"XmiIdRef\"'", "'\"uml:Lifeline\"'", "'\"uml:Message\"'", 
		"'\"uml:OccurrenceSpecification\"'", "'\"uml:CombinedFragment\"'", "'\"uml:InteractionOperand\"'", 
		"'\"guard\"'", "'\"fragment\"'", "'\"specification\"'", "'\"uml:InteractionConstraint\"'", 
		"'\"uml:OpaqueExpression\"'", "'\"covered\"'", "'\"receiveEvent\"'", "'\"sendEvent\"'", 
		"'\"body\"'", "'\"interactionOperator\"'", "'\"operand\"'", "'\"ownedElement\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "STRING", "NUMBER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SequenceDiagram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SequenceDiagramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SequenceDiagramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SequenceDiagramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class JsonContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SequenceDiagramParser.Eof, 0); }
		public JsonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_json; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJson(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JsonContext json() {
		JsonContext _localctx = new JsonContext(Context, State);
		EnterRule(_localctx, 0, RULE_json);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			value();
			State = 51;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PairContext[] pair() {
			return GetRuleContexts<PairContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PairContext pair(int i) {
			return GetRuleContext<PairContext>(i);
		}
		public ObjContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_obj; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObj(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ObjContext obj() {
		ObjContext _localctx = new ObjContext(Context, State);
		EnterRule(_localctx, 2, RULE_obj);
		int _la;
		try {
			State = 66;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 53;
				Match(T__0);
				State = 54;
				pair();
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 55;
					Match(T__1);
					State = 56;
					pair();
					}
					}
					State = 61;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 62;
				Match(T__2);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64;
				Match(T__0);
				State = 65;
				Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PairContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LifelineContext lifeline() {
			return GetRuleContext<LifelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public XmiIdContext xmiId() {
			return GetRuleContext<XmiIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public XmiIdRefContext xmiIdRef() {
			return GetRuleContext<XmiIdRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageContext message() {
			return GetRuleContext<MessageContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OccurenceSpecificationContext occurenceSpecification() {
			return GetRuleContext<OccurenceSpecificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CoveredContext covered() {
			return GetRuleContext<CoveredContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReceiveEventContext receiveEvent() {
			return GetRuleContext<ReceiveEventContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SendEventContext sendEvent() {
			return GetRuleContext<SendEventContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombinedFragmentContext combinedFragment() {
			return GetRuleContext<CombinedFragmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InteractionOperatorContext interactionOperator() {
			return GetRuleContext<InteractionOperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InteractionOperandContext interactionOperand() {
			return GetRuleContext<InteractionOperandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GuardContext guard() {
			return GetRuleContext<GuardContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InteractionConstraintContext interactionConstraint() {
			return GetRuleContext<InteractionConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecificationContext specification() {
			return GetRuleContext<SpecificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OpaqueExpressionContext opaqueExpression() {
			return GetRuleContext<OpaqueExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FragmentsContext fragments() {
			return GetRuleContext<FragmentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OwnedElementsContext ownedElements() {
			return GetRuleContext<OwnedElementsContext>(0);
		}
		public PairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PairContext pair() {
		PairContext _localctx = new PairContext(Context, State);
		EnterRule(_localctx, 4, RULE_pair);
		try {
			State = 91;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68;
				Match(STRING);
				State = 69;
				Match(T__3);
				State = 70;
				value();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71;
				name();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 72;
				lifeline();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 73;
				xmiId();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 74;
				xmiIdRef();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 75;
				message();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 76;
				occurenceSpecification();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 77;
				covered();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 78;
				receiveEvent();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 79;
				sendEvent();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 80;
				combinedFragment();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 81;
				interactionOperator();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 82;
				interactionOperand();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 83;
				guard();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 84;
				interactionConstraint();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 85;
				specification();
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 86;
				opaqueExpression();
				}
				break;
			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 87;
				operand();
				}
				break;
			case 19:
				EnterOuterAlt(_localctx, 19);
				{
				State = 88;
				fragments();
				}
				break;
			case 20:
				EnterOuterAlt(_localctx, 20);
				{
				State = 89;
				body();
				}
				break;
			case 21:
				EnterOuterAlt(_localctx, 21);
				{
				State = 90;
				ownedElements();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public ArrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrContext arr() {
		ArrContext _localctx = new ArrContext(Context, State);
		EnterRule(_localctx, 6, RULE_arr);
		int _la;
		try {
			State = 106;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93;
				Match(T__4);
				State = 94;
				value();
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 95;
					Match(T__1);
					State = 96;
					value();
					}
					}
					State = 101;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 102;
				Match(T__5);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104;
				Match(T__4);
				State = 105;
				Match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(SequenceDiagramParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjContext obj() {
			return GetRuleContext<ObjContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrContext arr() {
			return GetRuleContext<ArrContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 8, RULE_value);
		try {
			State = 115;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108;
				Match(STRING);
				}
				break;
			case NUMBER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109;
				Match(NUMBER);
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110;
				obj();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 111;
				arr();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 5);
				{
				State = 112;
				Match(T__6);
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 6);
				{
				State = 113;
				Match(T__7);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 7);
				{
				State = 114;
				Match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(Context, State);
		EnterRule(_localctx, 10, RULE_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(T__9);
			State = 118;
			Match(T__3);
			State = 119;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class XmiIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public XmiIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_xmiId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitXmiId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public XmiIdContext xmiId() {
		XmiIdContext _localctx = new XmiIdContext(Context, State);
		EnterRule(_localctx, 12, RULE_xmiId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			Match(T__10);
			State = 122;
			Match(T__3);
			State = 123;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class XmiIdRefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public XmiIdRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_xmiIdRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitXmiIdRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public XmiIdRefContext xmiIdRef() {
		XmiIdRefContext _localctx = new XmiIdRefContext(Context, State);
		EnterRule(_localctx, 14, RULE_xmiIdRef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(T__11);
			State = 126;
			Match(T__3);
			State = 127;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LifelineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		public LifelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lifeline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLifeline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LifelineContext lifeline() {
		LifelineContext _localctx = new LifelineContext(Context, State);
		EnterRule(_localctx, 16, RULE_lifeline);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(STRING);
			State = 130;
			Match(T__3);
			State = 131;
			Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MessageContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		public MessageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_message; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMessage(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MessageContext message() {
		MessageContext _localctx = new MessageContext(Context, State);
		EnterRule(_localctx, 18, RULE_message);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			Match(STRING);
			State = 134;
			Match(T__3);
			State = 135;
			Match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OccurenceSpecificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		public OccurenceSpecificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_occurenceSpecification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOccurenceSpecification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OccurenceSpecificationContext occurenceSpecification() {
		OccurenceSpecificationContext _localctx = new OccurenceSpecificationContext(Context, State);
		EnterRule(_localctx, 20, RULE_occurenceSpecification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			Match(STRING);
			State = 138;
			Match(T__3);
			State = 139;
			Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CombinedFragmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		public CombinedFragmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_combinedFragment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCombinedFragment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CombinedFragmentContext combinedFragment() {
		CombinedFragmentContext _localctx = new CombinedFragmentContext(Context, State);
		EnterRule(_localctx, 22, RULE_combinedFragment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(STRING);
			State = 142;
			Match(T__3);
			State = 143;
			Match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InteractionOperandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SequenceDiagramParser.STRING, 0); }
		public InteractionOperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interactionOperand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInteractionOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InteractionOperandContext interactionOperand() {
		InteractionOperandContext _localctx = new InteractionOperandContext(Context, State);
		EnterRule(_localctx, 24, RULE_interactionOperand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(STRING);
			State = 146;
			Match(T__3);
			State = 147;
			Match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GuardContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public GuardContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_guard; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISequenceDiagramVisitor<TResult> typedVisitor = visitor as ISequenceDiagramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGuard(this);
			else return visitor.VisitChildren(this);
		}
	}
